# PDS

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/core/: conf.json  np02_daphne_full_mode_bias_off.json
configs/np02/: conf.json  daphne_config.json  details.json  np02_daphne_full_mode.json  np02_daphne_full_mode_bias_off.json  np02_daphne_selftrigger.json  np02_daphne_selftrigger_bias_off.json
docs/: README.md  pdstools.md
maps/: IV_channel_map.json  original_channel_map.json
maps/map_changing_20240924/: conversion.py  correlation_map_end104.json  new_IV_channel_map.json  new_map_20240924.json
scripts/: README.md  get_protodunedhd_files.sh  get_protodunehd_files.sh  hdf5_toBinary.py  hdf5_toNP.ipynb  hdf5_to_root.py  hdf5_waveforms.ipynb  iv_ana.py  iv_analysis.py  iv_ch_plot.py  iv_one.ipynb  iv_run.py  iv_utl.py  multdecoder.py  simple_waveform_plots.py
scripts/daq_acquisition/: calib_apa1234.py  calib_apa1234_copy.py  config_ssp_json.py  config_ssp_json_copy.py  run_calib.sh  run_cosmic.sh  ssp_conf.json  threshold_bandwidth.py
scripts/h5df_and_decoders/: README.md  hdf5_charge_hist.ipynb  hdf5_toBinary.py  hdf5_waveforms.ipynb  multdecoder.py  waveforms.C
scripts/iv_analysis/: Data_comparison.py  IV_analysis.py  IV_analysis_utils.py  IV_run_ALL.py  README.md  Vbd_LN2T_corrected.py  Vbd_all_run.py  Vbd_best.py  Vbd_determination.py  Vbd_map.py  Vbd_plot_all_run.py  Vbd_plot_single_run.py  Vbd_plot_single_run_MOD.py  Vbd_plot_utils.py  (+4 more)
seed_generators/: details.json  output.json  seed.py
tests/: test_cli.py  test_seed.py
(+609 files in other folders)
